[tool.poetry]
name = "data-structures"
version = "0.1.0"
description = ""
authors = ["Mike Babb <mike7400@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
